gccida/g0/dump_edge_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_edge_info/src/cfg.c:1024:16: error: use of undeclared identifier 'off_74F495'
fprintf( file, off_74F495, ( unsigned int)dest->index); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_edge_info/src/cfg.c:1049:8: error: use of undeclared identifier 'bitnames_8'
fputs( bitnames_8[i], file); 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_edge_info/src/obj/cfg.o] Error 1
